--- a/Trabalho 3/Trab3+-+Yuri+Lopes+e+Maurício+Júnior.ipynb
+++ b/Trabalho 3/Trab3+-+Yuri+Lopes+e+Maurício+Júnior.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -33,36 +33,35 @@
     "# Import datasets and performance metrics\n",
     "from sklearn import datasets, metrics\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.datasets import fetch_mldata\n",
     "\n",
-    "# The digits dataset\n",
-    "digits = datasets.load_digits()\n",
-    "\n",
-    "# To apply a classifier on this data, we need to flatten the image, to\n",
-    "# turn the data in a (samples, feature) matrix:\n",
-    "n_samples = len(digits.images)\n",
-    "data = digits.images.reshape((n_samples, -1))\n",
+    "mnist = fetch_mldata(\"MNIST original\")\n",
+    "# rescale the data, use the traditional train/test split\n",
+    "X, y = mnist.data / 255., mnist.target\n",
+    "X_train, X_test = X[:60000], X[60000:]\n",
+    "y_train, y_test = y[:60000], y[60000:]\n",
     "\n",
     "class Report:\n",
     "    \n",
     "    @staticmethod\n",
-    "    def run(classifier):\n",
+    "    def run(classifier, clfname):\n",
+    "        print(clfname)\n",
     "        # We learn the digits on the first half of the digits\n",
-    "        classifier.fit(data[:n_samples // 2], digits.target[:n_samples // 2])\n",
+    "        classifier.fit(X_train, y_train)\n",
     "\n",
     "        # Now predict the value of the digit on the second half:\n",
-    "        expected = digits.target[n_samples // 2:]\n",
-    "        predicted = classifier.predict(data[n_samples // 2:])\n",
+    "        expected = y_test\n",
+    "        predicted = classifier.predict(X_test)\n",
     "\n",
     "        accuracy = accuracy_score(predicted, expected)\n",
-    "\n",
-    "        print(\"SVM\\n\")\n",
+    "        \n",
     "        print(\"Confusion matrix:\\n%s\" % metrics.confusion_matrix(expected, predicted))\n",
     "        print(\"\\nAccuracy: %s\" % accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -71,21 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM\n",
-      "\n",
-      "Confusion matrix:\n",
-      "[[87  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0 88  1  0  0  0  0  0  1  1]\n",
-      " [ 0  0 85  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0 79  0  3  0  4  5  0]\n",
-      " [ 0  0  0  0 88  0  0  0  0  4]\n",
-      " [ 0  0  0  0  0 88  1  0  0  2]\n",
-      " [ 0  1  0  0  0  0 90  0  0  0]\n",
-      " [ 0  0  0  0  0  1  0 88  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 88  0]\n",
-      " [ 0  0  0  1  0  1  0  0  0 90]]\n",
-      "\n",
-      "Accuracy: 0.968854282536\n"
+      "SVM\n"
      ]
     }
    ],
@@ -93,15 +78,13 @@
     "# Import classifier\n",
     "from sklearn import svm\n",
     "\n",
-    "# Create a classifier: a support vector classifier\n",
     "classifier = svm.SVC(gamma=0.001)\n",
-    "\n",
-    "Report.run(classifier)"
+    "Report.run(classifier, \"SVM\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,21 +95,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM\n",
-      "\n",
+      "Neural Network\n",
       "Confusion matrix:\n",
-      "[[86  0  0  0  1  0  1  0  0  0]\n",
-      " [ 1 79  0  3  1  2  1  0  0  4]\n",
-      " [ 0  0 86  0  0  0  0  0  0  0]\n",
-      " [ 0  0  2 77  0  3  0  0  6  3]\n",
-      " [ 2  0  0  0 85  0  1  1  0  3]\n",
-      " [ 0  0  0  0  0 87  1  0  0  3]\n",
-      " [ 0  1  0  0  0  0 90  0  0  0]\n",
-      " [ 0  0  1  0  3  3  0 78  0  4]\n",
-      " [ 0  3  0  1  1  3  0  1 76  3]\n",
-      " [ 1  0  0  2  0  2  0  0  0 87]]\n",
+      "[[ 963    0    1    0    3    5    3    1    2    2]\n",
+      " [   0 1127    3    1    0    0    1    1    2    0]\n",
+      " [   3    4 1006    1    5    2    3    4    4    0]\n",
+      " [   1    4   16  956    1   18    0    3    6    5]\n",
+      " [   1    1    4    1  964    0    3    0    0    8]\n",
+      " [   4    1    1    4    3  863    8    2    5    1]\n",
+      " [   8    3    2    1    3    3  937    0    1    0]\n",
+      " [   2   11   11    2    2    1    0  984    4   11]\n",
+      " [   8    2    6    3    3    6    2    2  942    0]\n",
+      " [   2    5    0    4   12    5    0    5    8  968]]\n",
       "\n",
-      "Accuracy: 0.924360400445\n"
+      "Accuracy: 0.971\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yuri\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:563: ConvergenceWarning: Stochastic Optimizer: Maximum iterations reached and the optimization hasn't converged yet.\n",
+      "  % (), ConvergenceWarning)\n"
      ]
     }
    ],
@@ -134,15 +124,15 @@
     "# Import classifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "# Create a classifier: a support vector classifier\n",
-    "classifier = MLPClassifier(solver='lbfgs', alpha=1e-5)\n",
-    "\n",
-    "Report.run(classifier)"
+    "classifier = MLPClassifier(hidden_layer_sizes=(50,), max_iter=40, alpha=1e-4,\n",
+    "                    solver='sgd', tol=1e-4, random_state=1,\n",
+    "                    learning_rate_init=.1)\n",
+    "Report.run(classifier, \"Neural Network\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -153,32 +143,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM\n",
-      "\n",
-      "Confusion matrix:\n",
-      "[[86  0  0  0  1  0  0  0  1  0]\n",
-      " [ 0 60  8  0  2  1  0  0  9 11]\n",
-      " [ 1  3 75  5  0  0  0  0  0  2]\n",
-      " [ 0  0  1 76  0  2  0  4  6  2]\n",
-      " [ 1  0  0  0 86  0  0  2  3  0]\n",
-      " [ 0  0  0  0  1 64  2  0  0 24]\n",
-      " [ 0  2  0  0  0  0 89  0  0  0]\n",
-      " [ 0  0  2  0  4  2  0 80  1  0]\n",
-      " [ 0  2  2  0  1  4  0  1 73  5]\n",
-      " [ 0  0  0  3  0  3  0  3  2 81]]\n",
-      "\n",
-      "Accuracy: 0.856507230256\n"
+      "Decision Tree\n"
      ]
     }
    ],
    "source": [
     "# Import classifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "# Create a classifier: a support vector classifier\n",
-    "classifier = MultinomialNB()\n",
-    "\n",
-    "Report.run(classifier)"
+    "classifier = DecisionTreeClassifier()\n",
+    "Report.run(classifier, \"Decision Tree\")"
    ]
   },
   {
@@ -191,10 +165,9 @@
     "### Discussão dos Resultados\n",
     "O classificador SVM apresentou melhores resultados em acurácia que os outros dois outros classificadores.\n",
     "\n",
-    "O classificador de redes neurais obteve resultado competitivo com SVM e, provavelmente ajustando parâmetros dos dois classificadores poder-se-ia obter resultados ainda melhores. O mesmo vale para o Nayve Bayes em termos de obter melhores resultados, embora sua acurácia não tenha sido competitiva em relação aos outros dois.\n",
+    "O classificador de redes neurais obteve resultado competitivo com SVM e, provavelmente ajustando parâmetros dos dois classificadores poder-se-ia obter resultados ainda melhores. O mesmo vale para árvore de decisão em termos de obter melhores resultados, embora sua acurácia não tenha sido competitiva em relação aos outros dois.\n",
     "\n",
-    "Em particular, o Nayve Bayes obteve o pior resultado, mas é importante lembrar que esse método é mais rápido, fácil de treinar e interpretar os resultados que redes neurais e SVM. Adaptar o Nayve Bayes de maneira incremental ou para novos dados é simples e rápido, já fazer isso para redes neurais pode não trazer bons resultados e talvez exigir mudanças na topologia da rede.\n",
-    "Em relação ao SVM, o Nayve Bayes assume independência entre as features, já o SVM, em termos simples, olha a interação entre essas features até um certo grau. Apesar disso, o consumo de memória e tempo de execução do SVM pode crescer muito em relação ao Nayve Bayes."
+    "Em particular, a árvore de decisão obteve o pior resultado, mas é importante lembrar que esse método é mais rápido, fácil de treinar e interpretar os resultados que redes neurais e SVM. Adaptar a árvore de decisão de maneira incremental ou para novos dados é simples e rápido, já fazer isso para redes neurais pode não trazer bons resultados e talvez exigir mudanças na topologia da rede. Em relação ao SVM, o consumo de memória e tempo de execução do SVM pode crescer muito em relação à árvore de decisão."
    ]
   },
   {
@@ -211,21 +184,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
