--- a/Trabalho 3/Trab3+-+Yuri+Lopes+e+Maurício+Júnior.ipynb
+++ b/Trabalho 3/Trab3+-+Yuri+Lopes+e+Maurício+Júnior.ipynb
@@ -23,7 +23,15 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MNIST loaded\n"
+     ]
+    }
+   ],
    "source": [
     "# Fonte: http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html\n",
     "\n",
@@ -36,6 +44,7 @@
     "from sklearn.datasets import fetch_mldata\n",
     "\n",
     "mnist = fetch_mldata(\"MNIST original\")\n",
+    "print(\"MNIST loaded\")\n",
     "# rescale the data, use the traditional train/test split\n",
     "X, y = mnist.data / 255., mnist.target\n",
     "X_train, X_test = X[:60000], X[60000:]\n",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,56 +79,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM\n"
+      "SVM\n",
+      "Confusion matrix:\n",
+      "[[ 968    0    1    1    0    3    3    2    2    0]\n",
+      " [   0 1126    3    0    0    1    3    0    2    0]\n",
+      " [   6    1  995    3    2    0    1   14    9    1]\n",
+      " [   0    0    3  980    1    7    0   12    7    0]\n",
+      " [   0    0   11    0  945    2    4    7    3   10]\n",
+      " [   2    0    1   11    2  856    6    5    7    2]\n",
+      " [   6    2    1    0    4    8  931    2    4    0]\n",
+      " [   1    6   14    2    3    0    0  989    0   13]\n",
+      " [   3    0    4    6    6   12    3   10  927    3]\n",
+      " [   4    6    4   11   12    2    0   17    3  950]]\n",
+      "\n",
+      "Accuracy: 0.9667\n"
      ]
     }
    ],
    "source": [
     "# Import classifier\n",
     "from sklearn import svm\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "classifier = svm.SVC(gamma=0.001)\n",
+    "sc = StandardScaler()\n",
+    "\n",
+    "X, y = mnist.data / 255., mnist.target\n",
+    "\n",
+    "X = sc.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test = X[:60000], X[60000:]\n",
+    "y_train, y_test = y[:60000], y[60000:]\n",
+    "\n",
+    "classifier = svm.SVC()\n",
     "Report.run(classifier, \"SVM\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neural Network\n",
-      "Confusion matrix:\n",
-      "[[ 963    0    1    0    3    5    3    1    2    2]\n",
-      " [   0 1127    3    1    0    0    1    1    2    0]\n",
-      " [   3    4 1006    1    5    2    3    4    4    0]\n",
-      " [   1    4   16  956    1   18    0    3    6    5]\n",
-      " [   1    1    4    1  964    0    3    0    0    8]\n",
-      " [   4    1    1    4    3  863    8    2    5    1]\n",
-      " [   8    3    2    1    3    3  937    0    1    0]\n",
-      " [   2   11   11    2    2    1    0  984    4   11]\n",
-      " [   8    2    6    3    3    6    2    2  942    0]\n",
-      " [   2    5    0    4   12    5    0    5    8  968]]\n",
-      "\n",
-      "Accuracy: 0.971\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Yuri\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:563: ConvergenceWarning: Stochastic Optimizer: Maximum iterations reached and the optimization hasn't converged yet.\n",
-      "  % (), ConvergenceWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import classifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -143,7 +146,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision Tree\n"
+      "Decision Tree\n",
+      "Confusion matrix:\n",
+      "[[ 924    1    8    5    6    9   11    4    6    6]\n",
+      " [   0 1090    9    6    1    7    5    3   12    2]\n",
+      " [  14   11  875   33   15   18   12   26   21    7]\n",
+      " [   8    7   29  859    6   46    2    7   27   19]\n",
+      " [   4    5    9    5  862   11   20   10   17   39]\n",
+      " [  12    4    0   50   10  752   22    6   20   16]\n",
+      " [  19    4   13   11   17   20  852    2   18    2]\n",
+      " [   3   11   25   15    6    4    0  928   12   24]\n",
+      " [  10    6   25   33   23   27   17   13  794   26]\n",
+      " [  13    2   11   17   46   14    5   21   23  857]]\n",
+      "\n",
+      "Accuracy: 0.8793\n"
      ]
     }
    ],
